# SignateTitanic

./: CHANGELOG.md  README.md  READMEJP.md  autokaggler_philosophy.md  pyproject.toml
src/signate_submitter/: __init__.py  __main__.py  agent.py  data_manager.py  pipeline.py
tests/: conftest.py  test_pipeline.py
