[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signate-submitter"
version = "0.2.0"
description = "Automated submission generator for Signate competitions"
authors = [{name = "signate-submitter"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scikit-learn>=1.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://signate.jp/"

[tool.setuptools.packages.find]
where = ["src"]
